# frenz_data_acquisition

./: .env.example  .gitignore  .marimo.toml  CLAUDE.md  DASHBOARD_STATUS.md  README.md  SCORES_REFERENCE.md  SECURITY.md  SESSION_METADATA.md  UPGRADE_SUMMARY.md  config.py  dashboard.py  data_storage.py  device_manager.py  discover_scores.py  event_logger.py  frenz_collector.py  inspect_scores.py  inspect_streamer_data.py  log_all_scores.py  pyproject.toml  requirements.txt  show_scores.py  test_all_scores.py  test_dashboard.py  test_live_data.py  test_scan.py  test_scores.py  uv.toml
docs/: DATA_FORMAT.md  FRENZ_SPEC.md  SYSTEM_OVERVIEW.md
scripts/: quick_start.py  setup.sh
tests/: test_frenz_collector.py
